--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Load Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJd4qI8T4xYyQ1xXNf9T7Y5/pE0Y01T4cE62F1V4A38E62B0X4e5Q==9" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body class="bg-gray-50 flex flex-col min-h-screen">
 
@@ -19,7 +19,7 @@
             <div class="flex justify-between h-[150px]">
                 <!-- Logo and Title restored -->
                 <div class="flex items-center space-x-3">
-                    <img src="/assets/data/blankc-white.png" alt="BlanKC Guitars Logo" class="h-full p-5">
+                    <img src="assets/data/blankc-white.png" alt="BlanKC Guitars Logo" class="h-full p-5">
                 </div>
                 <div class="flex items-end space-x-4 mb-5">
                     <!-- Nav items now use light text, hover highlights emerald -->
@@ -117,7 +117,7 @@
 
 
     <!-- Load Gallery Logic JS -->
-    <script type="module" src="/assets/js/gallery.js"></script>
+    <script type="module" src="assets/js/gallery.js"></script>
 
     <script>
         // Global function to load content into the main area
