--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <!-- Load Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJd4qI8T4xYyQ1xXNf9T7Y5/pE0Y01T4cE62F1V4A38E62B0X4e5Q==9" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="bg-gray-50 flex flex-col min-h-screen">
 
     <!-- Navigation Bar (Updated to match footer's dark scheme) -->
-    <nav class="bg-gray-900 shadow-xl border-b border-gray-700">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-[150px]">
+    <nav class="bg-gray-900 shadow-xl border-b border-gray-700 nav-bg">
+        <div class="w-full nav-backdrop">
+            <div class="flex justify-around h-[220px]">
                 <!-- Logo and Title restored -->
                 <div class="flex items-center space-x-3">
-                    <img src="assets/imgs/blankc-white.png" alt="BlanKC Guitars Logo" class="h-full p-5">
+                    <img src="assets/imgs/blankc-dark.png" alt="BlanKC Guitars Logo" class="h-full p-5">
                 </div>
                 <div class="flex items-end space-x-4 mb-5">
                     <!-- Nav items now use light text, hover highlights emerald -->
-                    <a href="#" id="nav-gallery" class="text-gray-200 hover:text-emerald-100 font-medium transition duration-150 py-2 px-3 rounded-sm" onclick="loadContent('gallery.html', 'nav-gallery'); return false;">
+                    <a href="#" id="nav-gallery" class="text-gray-100 bg-gray-800 border font-medium transition duration-150 py-2 px-3 rounded-sm" onclick="loadContent('gallery.html', 'nav-gallery'); return false;">
                         <i class="fas fa-list mr-2"></i> Gallery
                     </a>
-                    <a href="#" id="nav-about" class="text-gray-200 hover:text-emerald-100 font-medium transition duration-150 py-2 px-3 rounded-sm" onclick="loadContent('about.html', 'nav-about'); return false;">
+                    <a href="#" id="nav-about" class="text-gray-100 bg-gray-800 border font-medium transition duration-150 py-2 px-3 rounded-sm" onclick="loadContent('about.html', 'nav-about'); return false;">
                         <i class="fas fa-info-circle mr-2"></i> About
                     </a>
                 </div>
@@ -138,11 +138,11 @@
                 // Update active navigation item styling
                 document.querySelectorAll('nav a').forEach(link => {
                     link.classList.remove('bg-gray-700', 'text-white');
-                    link.classList.add('text-gray-300', 'hover:text-emerald-400');
+                    link.classList.add('text-gray-300', 'hover:text-white');
                 });
                 const activeLink = document.getElementById(activeNavId);
                 if (activeLink) {
-                    activeLink.classList.remove('text-gray-300', 'hover:text-emerald-400');
+                    activeLink.classList.remove('text-gray-300', 'hover:text-white');
                     activeLink.classList.add('bg-gray-700', 'text-white');
                 }
 
