--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-50 flex flex-col min-h-screen">
 
     <!-- Navigation Bar (Updated to match footer's dark scheme) -->
-    <nav class="bg-gray-900 shadow-xl border-b border-gray-700 nav-bg">
+    <nav class="bg-gray-900 shadow-xl border-b border-gray-700 nav-bg" style="background-image: url('assets/imgs/hbg.jpg');">
         <div class="w-full nav-backdrop">
             <div class="flex justify-around h-[220px]">
                 <!-- Logo and Title restored -->
