--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation Bar (Updated to match footer's dark scheme) -->
     <nav class="bg-gray-900 shadow-xl border-b border-gray-700 nav-bg" style="background-image: url('assets/imgs/hbg.jpg');">
         <div class="w-full nav-backdrop">
-            <div class="flex justify-around h-[220px]">
+            <div class="flex md:justify-around justify-center lg:h-[220px] flex-col md:flex-row">
                 <!-- Logo and Title restored -->
                 <div class="flex items-center space-x-3">
                     <img src="assets/imgs/blankc-dark.png" alt="BlanKC Guitars Logo" class="h-full p-5">
