--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <!-- Navigation Bar (Updated to match footer's dark scheme) -->
     <nav class="bg-gray-900 shadow-xl border-b border-gray-700 nav-bg" style="background-image: url('assets/imgs/hbg.jpg');">
         <div class="w-full nav-backdrop">
-            <div class="flex md:justify-around justify-center lg:h-[220px] flex-col md:flex-row">
+            <div class="flex md:justify-around justify-center lg:h-[250px] h-[120px] flex-col md:flex-row">
                 <!-- Logo and Title restored -->
-                <div class="flex items-center space-x-3">
-                    <img src="assets/imgs/blankc-dark.png" alt="BlanKC Guitars Logo" class="h-full p-5">
+                <div class="flex md:items-center space-x-3">
+                    <img src="assets/imgs/blankc-dark.png" alt="BlanKC Guitars Logo" class="h-full p-5 md:flex hidden">
                 </div>
-                <div class="flex items-end space-x-4 mb-5">
+                <div class="md:flex items-end space-x-4 mb-5 text-center">
                     <!-- Nav items now use light text, hover highlights emerald -->
                     <a href="#" id="nav-gallery" class="text-gray-100 bg-gray-800 border font-medium transition duration-150 py-2 px-3 rounded-sm" onclick="loadContent('gallery.html', 'nav-gallery'); return false;">
                         <i class="fas fa-list mr-2"></i> Gallery
