--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,4 @@
+<!-- TODO: Add view more card  -->
 <div class="max-w-7xl mx-auto">
     <h2 class="text-2xl font-extrabold text-gray-900 mb-6">Search Inventory</h2>
     <!-- Gallery Controls (Search only) -->
@@ -20,7 +21,7 @@
     </div>
 
     <!-- Inventory Gallery -->
-    <div id="galleryContainer" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
+    <div id="galleryContainer" class="grid grid-cols-1 lg:grid-cols-3 xl:grid-cols-5 gap-0 lg:gap-1">
         <!-- Item cards will be rendered here -->
         <div id="loadingIndicator" class="col-span-full text-center p-10 text-gray-500">
             Loading inventory data from **inventory_data.json**...
