--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
     </nav>
 
     <!-- Main Content Injection Point -->
-    <main id="mainContent" class="flex-grow max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8 mt-8"></main>
+    <div id="body-bg" style="background-image: url('assets/imgs/DSC07793-9.jpg');">
+
+    <main id="mainContent" class="py-20"></main>
+    
+    </div>
 
     <!-- Footer (Contact Icons Restored) -->
-    <footer class="bg-gray-900 text-gray-300 py-8 mt-12 w-full shadow-2xl">
+    <footer class="bg-gray-900 text-gray-300 py-8 w-full shadow-2xl">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             
             <div id="footerContactIcons" class="flex justify-center space-x-8 mb-6">
