--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJd4qI8T4xYyQ1xXNf9T7Y5/pE0Y01T4cE62F1V4A38E62B0X4e5Q==9" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.png">
+
 </head>
 <body class="bg-gray-50 flex flex-col min-h-screen">
 
@@ -19,7 +21,7 @@
             <div class="flex md:justify-around justify-center lg:h-[250px] h-[120px] flex-col md:flex-row">
                 <!-- Logo and Title restored -->
                 <div class="flex md:items-center space-x-3">
-                    <img src="assets/imgs/blankc-dark.png" alt="BlanKC Guitars Logo" class="h-full p-5 md:flex hidden">
+                    <img src="assets/imgs/blankclogo.png" alt="BlanKC Guitars Logo" class="h-full p-5 md:flex hidden">
                 </div>
                 <div class="md:flex items-end space-x-4 mb-5 text-center">
                     <!-- Nav items now use light text, hover highlights emerald -->
