--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Main Content Injection Point -->
     <div id="body-bg" style="background-image: url('assets/imgs/DSC07793-9.jpg');">
 
-    <main id="mainContent" class="py-20"></main>
+    <main id="mainContent" class="py-10"></main>
     
     </div>
 
@@ -77,7 +77,7 @@
     <!-- Modal Structure (Hidden by default) -->
     <div id="itemModal" class="fixed inset-0 bg-gray-900 bg-opacity-75 hidden z-50 overflow-y-auto" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
         <div class="flex items-center justify-center min-h-screen p-4 sm:p-6 lg:p-8">
-            <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl transform transition-all">
+            <div class="bg-white shadow-2xl w-full max-w-4xl transform transition-all">
                 <div class="p-6 sm:p-8">
                     <div class="flex justify-end">
                         <button id="closeModalBtn" type="button" class="text-gray-400 hover:text-gray-600 transition duration-150">
@@ -89,7 +89,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <!-- Image Column -->
                         <div class="relative">
-                            <img id="modalImage" src="" alt="Item Image" class="w-full h-auto object-cover rounded-lg shadow-lg">
+                            <img id="modalImage" src="" alt="Item Image" class="w-full h-auto object-cover shadow-lg">
                             <div id="imageThumbnails" class="flex space-x-2 mt-4 overflow-x-auto p-1">
                                 <!-- Thumbnails will be injected here -->
                             </div>
@@ -106,7 +106,7 @@
                             <div id="modalDescription" class="text-base text-gray-700 space-y-4">
                                 <!-- Detailed description HTML will be injected here -->
                             </div>
-                            <p class="shadow inline-flex items-center rounded-md bg-gray-400/10 p-2 mt-3 text-xs font-medium text-gray-400 inset-ring inset-ring-gray-400/20" id="modalKeywords"></p>
+                            <p class="shadow inline-flex items-center bg-gray-400/10 p-2 mt-3 text-xs font-medium text-gray-400 inset-ring inset-ring-gray-400/20" id="modalKeywords"></p>
                             
                             <!-- Contact Section -->
                             <div id="modalContactSection">
