--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 
-    <div class="flex-grow max-w-7xl mx-auto p-8 bg-white shadow-xl rounded-lg">
+    <div class="flex-grow max-w-7xl mx-auto p-8 bg-white shadow-xl h-[60vh]">
         <h2 class="text-2xl font-extrabold text-gray-900 mb-6 border-b pb-3">About BlanKC Guitars</h2>
 
         <div class="space-y-6 text-lg text-gray-700">
